--- a/package.json
+++ b/package.json
@@ -1,35 +1,60 @@
 {
-  "name": "windows-scheduler",
-  "version": "1.0.1",
-  "description": "Nodejs wrapper for native windows schtasks command",
+  "name": "@lxfater/windows-scheduler",
+  "version": "1.0.0",
+  "description": "A nodejs wrapper for native windows schtasks command.  \r The context under which the tasks runs is setted to SYSTEM user, otherwise every change on a task must be authenticated interactively.  \r For Windows XP and Windows Server 2003, or previous, there are options not supported.  \r More info [msdn.microsoft.com/Schtasks.exe](https://msdn.microsoft.com/en-us/library/windows/desktop/bb736357(v=vs.85).aspx)",
   "main": "task.js",
   "directories": {
-    "test": "test",
-    "lib": "lib"
+    "lib": "lib",
+    "test": "test"
+  },
+  "dependencies": {
+    "assertion-error": "^1.0.2",
+    "check-error": "^1.0.2",
+    "balanced-match": "^1.0.0",
+    "brace-expansion": "^1.1.8",
+    "child_process": "^1.0.2",
+    "chai": "^4.1.2",
+    "browser-stdout": "^1.3.0",
+    "commander": "^2.11.0",
+    "concat-map": "^0.0.1",
+    "debug": "^3.1.0",
+    "deep-eql": "^3.0.1",
+    "diff": "^3.3.1",
+    "escape-string-regexp": "^1.0.5",
+    "get-func-name": "^2.0.0",
+    "glob": "^7.1.2",
+    "growl": "^1.10.3",
+    "has-flag": "^2.0.0",
+    "he": "^1.1.1",
+    "inflight": "^1.0.6",
+    "fs.realpath": "^1.0.0",
+    "inherits": "^2.0.3",
+    "minimatch": "^3.0.4",
+    "minimist": "^0.0.8",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.19.1",
+    "ms": "^2.0.0",
+    "path-is-absolute": "^1.0.1",
+    "once": "^1.4.0",
+    "pathval": "^1.1.0",
+    "supports-color": "^4.4.0",
+    "type-detect": "^4.0.3",
+    "wrappy": "^1.0.2"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1"
   },
   "scripts": {
-    "test": "mocha test/test.js"
-  },  
+    "test": "mocha"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AndreaFranchini/windows-scheduler.git"
+    "url": "git+https://github.com/lxfater/windows-scheduler.git"
   },
-  "keywords": [
-    "windows",
-    "scheduler",
-    "task",
-    "schtasks"
-  ],
-  "dependencies": {
-    "chai": "^4.1.2",
-    "child_process": "^1.0.2",
-    "mocha": "^4.0.1",
-    "moment": "^2.19.1"
-  },
-  "author": "Andrea Franchini <andrea.franchini.93@gmail.com>",
+  "author": "lxfater",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AndreaFranchini/windows-scheduler/issues"
+    "url": "https://github.com/lxfater/windows-scheduler/issues"
   },
-  "homepage": "https://github.com/AndreaFranchini/windows-scheduler#readme"
+  "homepage": "https://github.com/lxfater/windows-scheduler#readme"
 }
